@@ -2261,7 +2261,7 @@ rb_const_search(VALUE klass, ID id, int exclude, int recurse, int visibility)
 	while ((ce = rb_const_lookup(tmp, id))) {
 	    if (visibility && RB_CONST_PRIVATE_P(ce)) {
 		rb_name_err_raise("private constant %2$s::%1$s referenced",
-				  klass, ID2SYM(id));
+				  tmp, ID2SYM(id));
 	    }
 	    rb_const_warn_if_deprecated(ce, klass, id);
 	    value = ce->value;
